feat #71 依赖版本变更